# bicameral-mcp

./: .gitignore  .pre-commit-config.yaml  ALEX_ALIGNMENT_DELIVERY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PLAN.md  README.md  RECOMMENDED_NIGHTLY_VERSION  REPORT.md  SECURITY.md  TODO.md  approval_gate.py  audit_log.py  authority.py  brief_renderer.py  code_locator_runtime.py  consent.py  context.py  contracts.py  coverage_guard.py  daemon_client.py  erasure_gate.py  governance-gates.yaml  governance_surface.py  local_counters.py  m2_grounding_log.py  m_shadow_divergence_log.py  plan-114-grounding-lint.md  plan-124-post-commit-hook-fix.md  plan-156-sessionend-queue-pivot.md  plan-156b-preflight-queue-drain.md  plan-187-gap-brief-unification.md  plan-190-compliance-event.md  plan-197-flow3-prompt-clarity.md  plan-199-windows-install-and-uv.md  (+41 more)
.bicameral/: customer-artifact-boundary.json  repo-governance.schema.json  repo-governance.yaml
.claude/: .qorlogic-installed.json  settings.json  settings.local.json
.devin/: wiki.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
adapters/: code_locator.py  ledger.py
assets/: CLAUDE.md  dashboard.html  git-for-specs-deck.html
cli/: __init__.py  _diagnose_gather.py  _ledger_io_engine.py  _link_commit_runner.py  branch_scan.py  brief_cli.py  brief_renderer.py  daemon_cli.py  diagnose.py  drift_report.py  drive_renew_cli.py  drive_stop_cli.py  drive_watch_cli.py  gc.py  ledger_export_cli.py  ledger_import_cli.py  ledger_io.py  link_commit_cli.py  migrate_state.py  notion_pending_cli.py  reset_cli.py  source_auth_cli.py  source_list_cli.py  sync_and_brief_cli.py  webhook_server_cli.py
code_locator/: CLAUDE.md  config.py  models.py
codegenome/: _content_cache.py  adapter.py  bind_service.py  confidence.py  continuity_service.py  deterministic_adapter.py  diff_categorizer.py  drift_classifier.py  drift_service.py
daemon/: __init__.py  __main__.py  process.py  proxy.py  registry.py  runtime.py  supervisor.py
dashboard/: admin.py  server.py
demo/: demo.tape  simulate.py
deploy/: Dockerfile.team-server  team-server.docker-compose.yml
dlq/: __init__.py  store.py
docs/: ARCHITECTURE_PLAN.md  BACKLOG.md  CLAUDE.md  COMPLIANCE_AUDIT_2026-06-03.md  DEV_CYCLE.md  EPHEMERAL_AUTHORITATIVE.md  GOVERNANCE_INDEX.md  META_LEDGER.md  PROCESS_SHADOW_GENOME.md  QOR_VS_ADHOC_COMPARISON.md  RELEASE_EVIDENCE_PROCEDURE.md  SHADOW_GENOME.md  SYSTEM_STATE.md  claim_evaluator-design.md  ecosystem-position.md  google-oauth-verification-submission.md  ideation-team-server-tier-v1-2026-05-14.md  integrations-settings-inventory.md  jira-integration-setup.md  ledger-queries-coverage.md  ledger-sociable-test-audit.md  llm-wiki-model-spike.md  preflight-failure-scenarios.md  research-brief-148-implicit-agent-decisions-2026-06-02.md  research-brief-compliance-audit-2026-05-06.md  research-brief-google-drive-push-notifications-2026-05-20.md  research-brief-notion-webhooks-2026-05-20.md  research-brief-priority-c-selective-ingest-2026-05-02.md  research-brief-r1-limitations-remediation-2026-05-14.md  research-brief-team-server-tier-v1-2026-05-14.md  semantic-drift-governance.md  sla.md  spec-alpha-review-routing-state-machine.md  state-partition-rfc.md  team-mode-setup.md  v0-architecture-current.md  v0-productization-design-partner-dogfood.md  v2-desync-optimization-guide.md  validation-554-thin-client-conformance.md  validation-584-tagged-daemon-handshake.md  (+2 more)
events/: __init__.py  dogfood.py  materializer.py  models.py  session_end_bridge.py  team_adapter.py  team_server_bridge.py  team_server_consumer.py  team_server_pull.py  transcript_queue.py  writer.py
filters/: __init__.py  evaluator.py  quota.py  spec.py
handlers/: CLAUDE.md  _match_shaping.py  bind.py  brief.py  canary_patterns.py  dashboard.py  decision_status.py  detect_drift.py  diagnose.py  doctor.py  feedback.py  gap_judge.py  history.py  ingest.py  link_commit.py  preflight.py  ratify.py  record_bypass.py  remove_decision.py  remove_source.py  reset.py  resolve_collision.py  resolve_compliance.py  search_decisions.py  sensitive_patterns.py  skill.py  sync_middleware.py  update.py  usage_summary.py
integrations/: __init__.py
ledger/: CLAUDE.md  adapter.py  ast_diff.py  canonical.py  client.py  queries.py  schema.py  status.py  timeout_telemetry.py
ledger_locator/: __init__.py  _origin_guard.py  _project_id.py
notifications/: __init__.py  channel.py  config.py  contracts.py  hub.py  slack.py  stderr.py
pii_archive/: __init__.py  contracts.py  store.py
preflight_adapters/: __init__.py  base.py  claude.py  cli.py  codex.py  context.py  evidence.py  registry.py  runner.py  state.py
protocol/: __init__.py  categorization.py  client.py  conformance.py  contracts.py  server.py  transport.py
pulse/: __init__.py  render.py  summary.py
release/: evidence_collect.py  hooks_manifest_generator.py  hooks_source.py  manifest_verify.py  sbom_emit.py  skills_manifest_generator.py  skills_source.py  skills_verify.py
release-units/: v0112-mcp-authentic-managed-host-hooks.json  v0112-mcp-host-config-preservation.json  v0113-mcp-host-config-preservation.json
scripts/: CLAUDE.md  __init__.py  assemble_mcp_alpha_host_promotion_receipt.py  audit_sociable_coverage.py  emit_release_descriptor.py  hooks_manifest_build_hook.py  install.ps1  install.sh  lint_plan_grounding.py  lint_skill_governance.py  resolve_atlas_assignment_event.py  run_mcp_alpha_host_promotion_topology.py  sim_accountable.py  sim_issue_108_flows.py  test_emit_release_descriptor.py  validate_governance_boundary.py  validate_mcp_alpha_host_promotion_grant.py  validate_repo_governance.py
secrets_store/: __init__.py  store.py
skills/: CLAUDE.md  CONSTANTS.md
sources/: __init__.py  protocol.py
team_server/: __init__.py  app.py  config.py  db.py  requirements.txt  schema.py
tests/: CLAUDE.md  README.md  _daemon_fixture.py  _extract_headless.py  _oss_corpus.py  _replay_helpers.py  conftest.py  eval_136_per_check_latency.py  test_alpha_flow.py  (+351 more)
(+382 files in other folders)
