[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bicameral-mcp"
version = "0.17.0"
description = "Bicameral MCP thin client for the local bicameral-bot ToolRequest daemon"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Bicameral AI"}]
keywords = ["mcp", "toolrequest", "bicameral-bot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
cocoindex = [
  "cocoindex>=1.0.7,<2.0.0",
  "sentence-transformers>=2.6.0",
  "cocoindex-code>=0.1.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=1.4.0",
  "tiktoken>=0.7.0,<1.0.0",
  "ruff>=0.15.16",
  "mypy>=2.1.0",
  "build>=1.5.0",
  "pre-commit>=4.6.0",
  "coverage[toml]>=7.14.1",
]
release = [
  "cyclonedx-bom>=4.0",
]

[project.scripts]
bicameral-mcp = "server:cli_main"

[tool.hatch.build.targets.wheel]
only-include = [
  "server.py",
  "authority.py",
  "daemon_client.py",
  "prompts.py",
  "responses.py",
  "tool_request.py",
  "tool_schemas.py",
  "version.py",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "README.md",
  "CHANGELOG.md",
  "SECURITY.md",
  "pyproject.toml",
  "server.py",
  "authority.py",
  "daemon_client.py",
  "prompts.py",
  "responses.py",
  "tool_request.py",
  "tool_schemas.py",
  "version.py",
  "docs/specs/bicameral-mcp-idealized-spec.md",
  "docs/plans/toolrequest-refactor-plan.md",
  "tests/test_toolrequest_thin_client.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "test-results",
  ".agent",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]  # pyflakes + pycodestyle + isort + bugbear + pyupgrade
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "F821", "F841", "E712", "B017", "B904", "E402", "E731"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
strict_optional = true
disable_error_code = ["import-untyped"]
exclude = [
  "test-results/",
  ".agent/",
  "build/",
  "dist/",
]
